<resources>
    <string name="app_name">IP Intervention App</string>

    <!--    CIPs Scale Values-->
    <string name="cips1">Not True At All</string>
    <string name="cips2">Rarely</string>
    <string name="cips3">Sometimes</string>
    <string name="cips4">Often</string>
    <string name="cips5">Very True</string>

    <!--    Setup Buttons Values -->
    <string name="setup_personal_button">Proceed to CIPs</string>
    <string name="setup_information_button">Start CIPs</string>
    <string name="setup_cips_button">Proceed</string>
    <string name="setup_results_button">Show Tailored Plan</string>
    <string name="setup_plan_button">Finish Setup</string>

    <!--  Navigation Titles    -->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--     -->

    <string name="menu_abilities">Abilities</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_information">Information</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_goals">Goals</string>
    <string name="action_deleteDB">Delete DB</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reflections">Reflections</string>
    <string name="menu_CIPs">CIPs Responses</string>


</resources>