<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_tabs_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_tabs_goals"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_reflections"
            android:icon="@drawable/ic_tabs_reflections"
            android:title="@string/menu_reflections" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_tabs_achievements"
            android:title="@string/menu_achievements" />
        <item
            android:id="@+id/nav_abilities"
            android:icon="@drawable/ic_tabs_abilities"
            android:title="@string/menu_abilities" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_tabs_information"
            android:title="@string/menu_information" />
        <item
            android:id="@+id/nav_cips"
            android:icon="@drawable/ic_tabs_cips"
            android:title="@string/menu_CIPs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_tabs_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>